--- a/Changes
+++ b/Changes
@@ -1,3 +1,5 @@
+  - fix NAME in Makefile.PL (RT#84212)
+
 1.000002 - 2012-07-19
   - Document why we don't try and handle class namesZ
   - Missed another stupid doc typo (thanks MJD)
