--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for Safe-Isa
 
+  - added new interface: $obj->$_call_if_can
+
 1.000006 - 2016-10-31
   - now falling back to $obj->isa if DOES/does is not implemented on the
     object, to avoid fatal errors on perls too old to have their own DOES
