preserve list context for the sub being called by $_call_if_can
also add some additional tests to demonstrate behaviour in list context
(some of which failed before the fix)

--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for Safe-Isa
 
+  - fix scalar/list context handling for $_call_if_can
+
 1.000007 - 2017-09-22
   - added new interface: $obj->$_call_if_can
 
