--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for Safe-Isa
 
+  - fix DOES tests on 5.8.x
+
 1.000009 - 2018-04-21
   - Fix handling of DOES and does (they no longer fall back to isa in most
     situations outside of Moo/Moose)
